chore(release): 1.101.3 [GRADLE SCRIPT]